# legendary-octo-adventure

./: .replit  ai_helper.py  cv_evaluator.py  deepseek_evaluator.py  google_sheet_client.py  main.py  main.py.bak  mastersheet_processor.py  nlp_matcher.py  pyproject.toml  render.yaml  requirements.txt  scoring_engine.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--COMPANY-OVERVIEW-Port-is-a-company-that-develops-an-internal-developer-platform-IDP-designed-to--1741670307181.txt  Pasted--Processing-CV-2-Abraham-Omorisiagbon-CV-Link-https-drive-google-com-open-id-1lEw7qPjS7S-O2BAiC-1741759812440.txt  Pasted-Python-JavaScript-Java-C-C-Ruby-PHP-Swift-Kotlin-Go-Rust-TypeScript-SQL-NoSQL-HTML--1741761779614.txt  Pasted-You-are-an-Expert-CV-Evaluator-specializing-in-technical-role-assessment-Your-primary-task-is-to-ev-1741643763248.txt
